<resources>
    <string name="app_name">StudentsRecords</string>
    <string name="loguser">Enter username:</string>
    <string name="logpass">Enter password:</string>
    <string name="showpass">show password:</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="class_prompt">Choose a stream</string>
    <string name="showstuddata">STUDENTS RECORDS</string>
    <string name="searchmenu">keyword:fname/roll</string>
    <string name="regfrmlogin">No Account yet? Create one</string>
    <string name="forgetpwd">Forget password?</string>
    <string name="favfood">What is your favourite food?</string>
    <string name="pet">What is your pet"'"s name?</string>
    <string name="home">SHOW</string>
    <string name="regpg">Registration Page</string>
    <string name="homepg">HOME</string>
    <string name="loginpg">LOGIN PAGE</string>
    <string name="studregpg">Student Registration</string>
    <string name="studprofilepg">Student Profile</string>
    <string-array name="student_class">
        <item>2013-14</item>
        <item>2014-15</item>
        <item>2015-16</item>
        <item>2016-17</item>
        <item>2017-18</item>
        <item>2018-19</item>
        <item>2019-20</item>
        <item>2020-21</item>
        <item>2021-22</item>
        <item>2022-23</item>
        <item>2023-24</item>
        <item>2024-25</item>
        <item>2025-26</item>
        <item>2026-27</item>
        <item>2027-28</item>
        <item>2028-29</item>
        <item>2029-30</item>
        <item>2030-31</item>
        <item>2031-32</item>
        <item>2032-33</item>
        <item>2033-34</item>
        <item>2034-35</item>
        <item>2035-36</item>
        <item>2036-37</item>
        <item>2037-38</item>
        <item>2038-39</item>
        <item>2039-40</item>
        <item>2040-41</item>
        <item>2041-42</item>
        <item>2042-43</item>
        <item>2043-44</item>
        <item>2044-45</item>
        <item>2045-46</item>
        <item>2046-47</item>
        <item>2047-48</item>
        <item>2048-49</item>
        <item>2049-50</item>
        <item>2050-51</item>
        <item>2051-52</item>
        <item>2052-53</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
