<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="1dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.sohini101.studentsrecords.LoginActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#13b586"
            android:orientation="horizontal"
            android:layout_alignParentTop="true">

            <ImageView android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/ic_launcher"
                android:layout_marginLeft="10dp"/>


            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="#ffffff"
                android:layout_marginLeft="25dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal|center_vertical"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="120dp"
                android:background="@drawable/login" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:progressDrawable="@drawable/circular_bar_progress" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#e5d0ff"
                android:id="@+id/div"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>


        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvloguser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loguser"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/login"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etloguser"
                android:maxLines="1" android:singleLine="true"
                android:textColor="#8c2fe7"
                android:layout_below="@+id/tvloguser"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/a4"
                android:textAlignment="center"
                android:imeOptions="actionDone"
                android:cursorVisible="false"
                android:longClickable="false"
                android:background="@drawable/roundededittext"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#e5d0ff"
                android:id="@+id/div1"
                android:layout_below="@id/etloguser"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/tvlogpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logpass"
                android:layout_marginTop="10dp"
                android:textColor="@color/login"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_below="@+id/div1"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etlogpass"
                android:maxLines="1" android:singleLine="true"
                android:textColor="#8c2fe7"
                android:layout_below="@+id/tvlogpass"
                android:layout_marginTop="10dp"
                android:imeOptions="actionDone"
                android:drawableLeft="@drawable/pass"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:cursorVisible="false"
                android:longClickable="false"
                android:background="@drawable/roundededittext"/>
            <CheckBox
                android:id="@+id/cb_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/etlogpass"
                android:textSize="20sp"
                android:text="@string/showpass" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#e5d0ff"
                android:id="@+id/div2"
                android:layout_below="@id/cb_show_pass"
                android:layout_marginTop="5dp"
                />
            <Button android:id="@+id/blogin" style="?android:textAppearanceLarge"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:background="#ff7e51c2"
                android:onClick="pleaselogin"
                android:layout_below="@+id/cb_show_pass"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regfrmloginpg"
                android:textSize="20sp"
                android:layout_below="@id/blogin"
                android:layout_marginTop="5dp"
                android:textColor="#ffffff"
                android:onClick="regfromlogin"
                android:text="@string/regfrmlogin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgetPwd"
                android:textSize="20sp"
                android:layout_below="@id/regfrmloginpg"
                android:layout_marginTop="5dp"
                android:textColor="#ffffff"
                android:visibility="invisible"
                android:text="@string/forgetpwd"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#e5d0ff"
                android:id="@+id/div3"
                android:layout_below="@id/regfrmloginpg"
                android:layout_marginTop="10dp"
                />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
